Widen timetable modal, add event-height and event-margin-bottom props

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
                 }
             </style>
         </noscript>
-        <div id="app"></div>
+
+        <div id="app" />
     </body>
 </html>
