Add Netlify headers, update Vue config to include edge naming, prefetch Umami script, add AUHSD hybrid

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,17 @@
         <meta name="Description" content="An app for schedules" />
 
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
         <link
             rel="preload"
             href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
             as="style"
         />
-
+        <link
+            rel="preload"
+            href="https://umami-sepia.vercel.app/umami.js"
+            as="script"
+        />
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
