Update AUHSD Hybrid schedule

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
                 <div id="body">
                     <h1>JavaScript</h1>
                     <p>
-                        The redesigned version of Schedules requires JavaScript
-                        to be enabled. Please enable it to continue. You can use
+                        Schedules requires JavaScript to be enabled. Please
+                        enable it to continue. You can use
                         <a
                             href="https://support.google.com/adsense/answer/12654?hl=en"
                             target="_blank"
