Add favicons and social meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,142 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <meta name="Description" content="An app for schedules" />
 
-        <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+        <meta name="title" content="Schedules" />
+        <meta name="description" content="An app for schedules" />
 
+        <!-- Descriptive Tags -->
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://schedules.unisontech.org/" />
+        <meta property="og:title" content="Schedules - an app for schedules" />
+        <meta
+            property="og:description"
+            content="An app for schedules. Find out exactly how much time is remaining in a period or what the period is."
+        />
+        <meta property="og:image" content="/img/social_preview.png" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta
+            property="twitter:url"
+            content="https://schedules.unisontech.org/"
+        />
+        <meta
+            property="twitter:title"
+            content="Schedules - an app for schedules"
+        />
+        <meta
+            property="twitter:description"
+            content="An app for schedules. Find out exactly how much time is remaining in a period or what the period is."
+        />
+        <meta property="twitter:image" content="/img/social_preview.png" />
+
+        <!--  Non-Essential, But Recommended -->
+        <meta
+            property="og:site_name"
+            content="Schedules - an app for schedules"
+        />
+        <meta
+            name="twitter:image:alt"
+            content="The Schedules logo on a background comprised of the light and dark variants of Schedules' primary color"
+        />
+
+        <!-- Shortcut Icons -->
+        <link rel="shortcut icon" href="/img/favicons/favicon.ico" />
+        <link
+            rel="icon"
+            sizes="16x16 32x32 64x64"
+            href="/img/favicons/favicon.ico"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="196x196"
+            href="/img/favicons/favicon-192.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="160x160"
+            href="/img/favicons/favicon-160.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="96x96"
+            href="/img/favicons/favicon-96.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="64x64"
+            href="/img/favicons/favicon-64.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/img/favicons/favicon-32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/img/favicons/favicon-16.png"
+        />
+        <link rel="apple-touch-icon" href="/img/favicons/favicon-57.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="114x114"
+            href="/img/favicons/favicon-114.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="72x72"
+            href="/img/favicons/favicon-72.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="144x144"
+            href="/img/favicons/favicon-144.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="60x60"
+            href="/img/favicons/favicon-60.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="120x120"
+            href="/img/favicons/favicon-120.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="76x76"
+            href="/img/favicons/favicon-76.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="152x152"
+            href="/img/favicons/favicon-152.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/img/favicons/favicon-180.png"
+        />
+        <meta name="msapplication-TileColor" content="#FFFFFF" />
+        <meta
+            name="msapplication-TileImage"
+            content="/img/favicons/favicon-144.png"
+        />
+        <meta
+            name="msapplication-config"
+            content="/img/favicons/browserconfig.xml"
+        />
+
+        <!-- Preconnect, prefetch, and preload -->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
 
@@ -19,6 +151,10 @@
         />
 
         <title><%= htmlWebpackPlugin.options.title %></title>
+
+        <script>
+            console.debug("<%= BASE_URL %>");
+        </script>
     </head>
     <body>
         <noscript>
