--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
 
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
+        <!-- Descriptive Tags -->
         <meta name="title" content="Schedules" />
         <meta name="description" content="An app for schedules" />
 
-        <!-- Descriptive Tags -->
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://schedules.unisontech.org/" />
-        <meta property="og:title" content="Schedules - an app for schedules" />
+        <meta property="og:title" content="Schedules" />
         <meta
             property="og:description"
             content="An app for schedules. Find out exactly how much time is remaining in a period or what the period is."
@@ -26,10 +26,7 @@
             property="twitter:url"
             content="https://schedules.unisontech.org/"
         />
-        <meta
-            property="twitter:title"
-            content="Schedules - an app for schedules"
-        />
+        <meta property="twitter:title" content="Schedules" />
         <meta
             property="twitter:description"
             content="An app for schedules. Find out exactly how much time is remaining in a period or what the period is."
@@ -37,10 +34,7 @@
         <meta property="twitter:image" content="/img/social_preview.png" />
 
         <!--  Non-Essential, But Recommended -->
-        <meta
-            property="og:site_name"
-            content="Schedules - an app for schedules"
-        />
+        <meta property="og:site_name" content="Schedules" />
         <meta
             name="twitter:image:alt"
             content="The Schedules logo on a background comprised of the light and dark variants of Schedules' primary color"
@@ -151,12 +145,13 @@
         />
 
         <title><%= htmlWebpackPlugin.options.title %></title>
-
-        <script>
-            console.debug("<%= BASE_URL %>");
-        </script>
     </head>
     <body>
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
+        />
+
         <noscript>
             <div id="container">
                 <div id="body">
@@ -178,6 +173,7 @@
                     <p>Thank you for using Schedules.</p>
                 </div>
             </div>
+
             <style>
                 body,
                 html {
@@ -201,11 +197,6 @@
                 }
             </style>
         </noscript>
-
-        <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
-        />
 
         <div id="app" />
     </body>
