Update Umami domain

--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
 
         <link
             rel="preload"
-            href="https://umami-sepia.vercel.app/umami.js"
+            href="https://umami.unisontech.org/umami.js"
             as="script"
         />
 
