Change social preview filename to `social-preview.png`, add iOS 12.4+ support in `.browserslistrc`

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
             property="og:description"
             content="<%= htmlWebpackPlugin.options.description %>"
         />
-        <meta property="og:image" content="/img/social_preview.png" />
+        <meta property="og:image" content="/img/social-preview.png" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
@@ -43,7 +43,7 @@
             property="twitter:description"
             content="<%= htmlWebpackPlugin.options.description %>"
         />
-        <meta property="twitter:image" content="/img/social_preview.png" />
+        <meta property="twitter:image" content="/img/social-preview.png" />
 
         <!--  Supporting Tags -->
         <meta
