--- a/public/index.html
+++ b/public/index.html
@@ -364,5 +364,9 @@
         </noscript>
 
         <div id="app" />
+        <script
+            src="https://cdn.jsdelivr.net/gh/virae/we-stand-with-ukraine@v1.0.1/badge.js"
+            async
+        ></script>
     </body>
 </html>
