--- a/public/index.html
+++ b/public/index.html
@@ -142,8 +142,8 @@
         />
 
         <!-- Preconnect, prefetch, and preload -->
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="dns-prefetch" href="https://o373497.ingest.sentry.io" />
 
         <% if (!htmlWebpackPlugin.options.developmentMode) { %>
@@ -159,19 +159,7 @@
     <body>
         <link rel="stylesheet" href="/css/scrollbars.css" />
 
-        <!-- Barlow Font -->
         <style>
-            /* vietnamese */
-            @font-face {
-                font-family: "Barlow";
-                font-style: normal;
-                font-weight: 100;
-                font-display: swap;
-                src: url(https://fonts.gstatic.com/s/barlow/v11/7cHrv4kjgoGqM7E3b_s0wH8DnzcjTrA.woff2)
-                    format("woff2");
-                unicode-range: U+0102-0103, U+0110-0111, U+0128-0129,
-                    U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-            }
             /* latin-ext */
             @font-face {
                 font-family: "Barlow";
@@ -194,17 +182,6 @@
                 unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC,
                     U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122,
                     U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-            }
-            /* vietnamese */
-            @font-face {
-                font-family: "Barlow";
-                font-style: normal;
-                font-weight: 300;
-                font-display: swap;
-                src: url(https://fonts.gstatic.com/s/barlow/v11/7cHqv4kjgoGqM7E3p-ks6Fostz0rdom9.woff2)
-                    format("woff2");
-                unicode-range: U+0102-0103, U+0110-0111, U+0128-0129,
-                    U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
             }
             /* latin-ext */
             @font-face {
@@ -229,17 +206,6 @@
                     U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122,
                     U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
             }
-            /* vietnamese */
-            @font-face {
-                font-family: "Barlow";
-                font-style: normal;
-                font-weight: 400;
-                font-display: swap;
-                src: url(https://fonts.gstatic.com/s/barlow/v11/7cHpv4kjgoGqM7E_A8s5ynghnQci.woff2)
-                    format("woff2");
-                unicode-range: U+0102-0103, U+0110-0111, U+0128-0129,
-                    U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-            }
             /* latin-ext */
             @font-face {
                 font-family: "Barlow";
@@ -262,17 +228,6 @@
                 unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC,
                     U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122,
                     U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-            }
-            /* vietnamese */
-            @font-face {
-                font-family: "Barlow";
-                font-style: normal;
-                font-weight: 600;
-                font-display: swap;
-                src: url(https://fonts.gstatic.com/s/barlow/v11/7cHqv4kjgoGqM7E30-8s6Fostz0rdom9.woff2)
-                    format("woff2");
-                unicode-range: U+0102-0103, U+0110-0111, U+0128-0129,
-                    U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
             }
             /* latin-ext */
             @font-face {
@@ -297,17 +252,6 @@
                     U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122,
                     U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
             }
-            /* vietnamese */
-            @font-face {
-                font-family: "Barlow";
-                font-style: normal;
-                font-weight: 700;
-                font-display: swap;
-                src: url(https://fonts.gstatic.com/s/barlow/v11/7cHqv4kjgoGqM7E3t-4s6Fostz0rdom9.woff2)
-                    format("woff2");
-                unicode-range: U+0102-0103, U+0110-0111, U+0128-0129,
-                    U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-            }
             /* latin-ext */
             @font-face {
                 font-family: "Barlow";
@@ -330,17 +274,6 @@
                 unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC,
                     U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122,
                     U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-            }
-            /* vietnamese */
-            @font-face {
-                font-family: "Barlow";
-                font-style: normal;
-                font-weight: 900;
-                font-display: swap;
-                src: url(https://fonts.gstatic.com/s/barlow/v11/7cHqv4kjgoGqM7E3j-ws6Fostz0rdom9.woff2)
-                    format("woff2");
-                unicode-range: U+0102-0103, U+0110-0111, U+0128-0129,
-                    U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
             }
             /* latin-ext */
             @font-face {
