--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-white dark:bg-black">
+<html lang="en">
     <head>
         <title>Schedules</title>
     </head>
-    <body class="min-h-screen bg-white dark:bg-black">
+    <body class="bg-white dark:bg-black">
         <div id="app"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
