--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <body class="bg-white dark:bg-black">
         <div id="app"></div>
         <script type="module" src="/src/main.ts"></script>
+        <script
+            async
+            defer
+            data-website-id="b104efd2-c55b-4806-a4a5-586e62ca8186"
+            src="https://umami.unisontech.org/umami.js"
+        ></script>
     </body>
 </html>
