Update Umami URL

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             async
             defer
             data-website-id="b104efd2-c55b-4806-a4a5-586e62ca8186"
-            src="https://umami.unisontech.org/umami.js"
+            src="https://umami.unisontech.org/script.js"
         ></script>
     </body>
 </html>
